# JpoProducer

./: .gitignore  AGENTS.md  Cargo.toml  ENV.md  GROKBUILD_HANDOFF.md  HANDOVER.md  LICENSE  README.md  SPEC-v1.md  SPEC-v2.md  pack.ps1
.grok/skills/jpo-producer/: SKILL.md
.grok/skills/jpo-producer/references/: bug-reduction-plan.md  domino-lessons.md  invariants.md  midi-industry.md
archive/jpo-v2/: .gitignore  HANDOVER.md
archive/jpo-v2/assets/patterns/: BassDance01.mid  BassDance02.mid  Bass_syncopation.mid  Drum16beat_01.mid  Drum4beat_01.mid  DrumHipHopbeat_01.mid  Drum_syncopation.mid  Piano01.mid  Piano02.mid  Piano04.mid  Piano_syncopation.mid
archive/jpo-v2/crates/jpo_app/: Cargo.toml  build.rs
archive/jpo-v2/crates/jpo_edit/: Cargo.toml
archive/python/: README.md  main.py  requirements.txt
archive/python/assets/: README.md
assets/patterns/: Drum8beat_01.mid  Piano03.mid
assets/stamps/: README.txt  canon_8bar.jpostamp  classic_1625.jpostamp  descend_8bar.jpostamp  jpop_sync_push.jpostamp  komuro_4bar.jpostamp  marusa_4bar.jpostamp  oudo_4bar.jpostamp  oudo_half.jpostamp
docs/: FUTURE-grok-co-producer.md
jpo-v2/: Cargo.toml  HANDOVER.md
jpo-v2/assets/patterns/: Bass8beat01.mid  Bass8beat02.mid  Drum8beat_02.mid
jpo-v2/crates/jpo_model/src/: lib.rs
scripts/: setup-wsl.sh  update-grok-shortcuts.ps1
src/: main.rs
tests/golden/: ACCEPTANCE.md
tests/golden/case01/: README.txt  broken.mid  fixed.mid  scenario.md
tests/golden/case02/: MidiTest.jpo  README.txt  scenario.md
tests/golden/case03/: README.txt  broken.mid  scenario.md
(+3 files in other folders)
